# dulion_com

./: .gitignore  Cargo.toml  README.md  Trunk.toml  docker-compose.yaml  index.html  package-lock.json  package.json  release.sh  tailwind.css
public/markdown/: projects.yaml  resources.yaml
public/markdown/projects/: esp32_hydronics.md  rv_camera.md  ws2812b_lights.md
public/markdown/resources/: esp32.md  java_spring.md  rust.md
redirect/: 404.html
src/: api.rs  lib.rs  main.rs
src/components/: article.rs  avatar.rs  counter_btn.rs  errors.rs  index.rs  menu.rs  mod.rs
src/pages/: home.rs  mod.rs  projects.rs  reader.rs  resources.rs
