[package]
name = "dulion_com"
version = "0.1.0"
edition = "2021"
authors = ["Phillip DuLion <phillip@dulion.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console_error_panic_hook = "0.1"
console_log = "1"
gloo-net = { version = "0.6.0", features = ["http"] }
leptos = { version = "0.8", features = ["csr"] }
leptos_meta = { version = "0.8" }
leptos_router = { version = "0.8" }
log = "0.4"
markdown = "1.0.0"
send_wrapper = "0.6.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9.34-deprecated"
thiserror = "2.0.17"
web-sys = { version = "0.3", features = ["AbortController", "AbortSignal"] }

# utils
# strum = { version = "0.25", features = ["derive", "strum_macros"] }
# strum_macros = "0.25"


[dev-dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-test = "0.3"
web-sys = { version = "0.3", features = ["Document", "Window"] }


[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"
